--- a/web-client/prepros.config
+++ b/web-client/prepros.config
@@ -880,9 +880,8 @@
     },
     "files": [
       {
-        "file": "scss/vars.scss",
+        "file": "templates/scss/vars.scss",
         "config": {
-          "autoCompile": false,
           "tasks": {
             "autoprefixer": {
               "enable": false
