--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,16 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ secrets.DOCKER_LOGIN }}/${{ secrets.DOCKER_REPO_NAME }}
+          tags: latest
+          labels: latest
           
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
   
   
   server_update:
