--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Connect and run script
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
           port: ${{ secrets.SERVER_PORT }}
           username: ${{ secrets.SERVER_USER_LOGIN }}
           password: ${{ secrets.SERVER_USER_PASSWORD }}
           script_stop: true
-          script: bash deploy.sh
+          script: |
+            echo "Stop container"
+            docker stop message-center
+            docker rm frontend
+            docker image rm samsqd/message-center
+            echo "Pull image"
+            docker pull samsqd/message-center
+            echo "Start container"
+            docker run -p 8000:80 --name message-center -e URL=http://185.41.160.212/ -t samsqd/message-center
+            echo "Finish deploying!"
