the final version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
             echo "Pull image"
             docker pull samsqd/message-center
             echo "Start container"
-            docker run -p 8000:80 --name message-center -e URL=http://185.41.160.212/ -t samsqd/message-center
+            docker run -p 8000:80 --name message-center -e URL=http://185.41.160.212/ -t -d samsqd/message-center
             echo "Finish deploying!"
